    o Fixed broken server-side SCP and command initialization.
    o Removed NONE value from SecurityLevel. This was only used in NoneCipher and NoneHmac, which are not installed by default and the option was confusing in other context.
    o Add server socket channel to all permanent accept threads.
    o Support for SHA2 signature usage in RSA certificates.
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.0-RC6 - May 4, 2021

Bug Fixes
    o Upgraded BouncyCastle dependencies to 1.68 (BC) and 1.0.2 (BC-FIPS)
    o Upgraded commons-io dependency to 2.7.
    o Authentication hangs if server does not support KBI authentication or if `preferKeyboardInteractiveOverPassword` is false.
    o The static executor field on SshContext can be shutdown and then reused by another SshClient, resulting in an exception.
    
-----------------

Maverick Synergy 3.0.0-RC5 - April 6, 2021

Bug Fixes
    o FileLoggingContext fails with NPE when log path is relative.   
    o Authenticators setup in SshClientContext would incorrectly be attempted multiple times. 
    o ClientStateListener authenticate method no longer passes a List of Authenticator objects to be started after it returns. Authentication should be initiated within the authenticate handler.
    o Ensure that password authenticator future is triggered when wrapped with in automatic keyboard-interactive conversion.
    o Don't pass authenticator to PasswordOverKeyboardInteractiveCallback because there is no way for its future to be completed.
    o OpenSSH certificate extensions values and critical options not encoded correctly during sign operation. 
    o Fixed connection-based logging which was incorrectly preventing logging without an identification or user configured value.
    o Moved some VirtualFileFactory log statements to TRACE as they are even too chatty for DEBUG mode.